# GLRenderer

./: .gitignore  CMakeLists.txt
dependencies/glad/: glad.h
include/core/: input.hpp  mesh.hpp  renderer.hpp  shader.hpp  window.hpp
include/math/: matrix.hpp  vector.hpp
include/utils/: logger.hpp
resources/shaders/: unlit.frag  unlit.vert
src/: glad.c  main.cpp
src/core/: mesh.cpp  renderer.cpp  shader.cpp  window.cpp
